...
        viewModel(factory = ListProfilesViewModel.Factory)
) {
  val currentProfile =
      listProfilesViewModel.currentProfile.collectAsState().value
          ?: return Text(
              text = "No Profile selected. Should not happen.",
              modifier = Modifier.testTag("editTutorNoProfile"))
  var firstName by remember { mutableStateOf(currentProfile.firstName) }
  var lastName by remember { mutableStateOf(currentProfile.lastName) }
  var phoneNumber by remember { mutableStateOf(currentProfile.phoneNumber) }
  val academicLevel = remember { mutableStateOf(currentProfile.academicLevel.name) }
  var nameEditing by remember { mutableStateOf(false) }
  val section = remember { mutableStateOf(currentProfile.section.name) }
...
  val context = LocalContext.current

  Scaffold(
      topBar = {
        IconButton(
            onClick = { navigationActions.goBack() },
            modifier = Modifier.testTag("editProfileCloseButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Default.ArrowBack,
                  contentDescription = "Go Back")
            }
      },
      content = { paddingValues ->
...
                  modifier = Modifier.fillMaxWidth(),
              ) {
                Text(
                    text = "${currentProfile.firstName} ${currentProfile.lastName}",
                    style = MaterialTheme.typography.headlineMedium,
                    textAlign = TextAlign.Center,
                    modifier = Modifier.testTag("nameTitle"))

                // Edit button with icon
                IconButton(
                    onClick = { nameEditing = !nameEditing },
                    modifier = Modifier.testTag("editNameButton").offset(y = (-4).dp)) {
                      Icon(imageVector = Icons.Default.Edit, contentDescription = "Edit Profile")
                    }
              }
              Text(
                  "Modify your profile information:",
                  style = MaterialTheme.typography.titleMedium,
                  modifier = Modifier.testTag("editProfileInstructionText"))

              Spacer(modifier = Modifier.height(16.dp))

              if (nameEditing) {
                // First Name input
                OutlinedTextField(
                    value = firstName,
                    onValueChange = { firstName = it },
                    textStyle = MaterialTheme.typography.bodyLarge,
                    label = { Text("First Name") },
                    placeholder = { Text("Enter your first name") },
                    modifier = Modifier.fillMaxWidth().testTag("firstNameField"),
                    singleLine = true)

                // Last Name input
                OutlinedTextField(
                    value = lastName,
                    onValueChange = { lastName = it },
                    label = { Text("Last Name") },
                    placeholder = { Text("Enter your last name") },
                    modifier = Modifier.fillMaxWidth().testTag("lastNameField"),
                    shape = MaterialTheme.shapes.small,
                    singleLine = true)
              }

              // Phone Number input
              OutlinedTextField(
                  value = phoneNumber,
                  onValueChange = { phoneNumber = it },
                  label = { Text("Phone Number") },
                  placeholder = { Text("Enter your phone number") },
                  modifier = Modifier.fillMaxWidth().testTag("phoneNumberField"),
                  shape = MaterialTheme.shapes.small,
                  singleLine = true)

              Text(text = "Modify your section", style = MaterialTheme.typography.titleSmall)

              Spacer(modifier = Modifier.height(16.dp))
...
                        Modifier.fillMaxWidth()
                            .clickable { expandedSection = true }
                            .background(Color.Transparent, shape = MaterialTheme.shapes.small)
                            .border(
                                1.dp, MaterialTheme.colorScheme.outline, MaterialTheme.shapes.small)
                            .padding(16.dp)
                            .testTag("editProfileSectionDropdown"),
                    style = MaterialTheme.typography.bodyLarge)

                DropdownMenu(
                    expanded = expandedSection,
                    onDismissRequest = { expandedSection = false },
                    modifier = Modifier.fillMaxWidth().zIndex(1f),
...
                        Modifier.fillMaxWidth()
                            .clickable { expandedAcademicLevel = true }
                            .background(Color.Transparent, shape = MaterialTheme.shapes.small)
                            .border(
                                1.dp, MaterialTheme.colorScheme.outline, MaterialTheme.shapes.small)
                            .padding(16.dp)
                            .testTag("editProfileAcademicLevelDropdown"),
                    style = MaterialTheme.typography.bodyLarge)

                DropdownMenu(
                    expanded = expandedAcademicLevel,
                    onDismissRequest = { expandedAcademicLevel = false },
                    modifier = Modifier.fillMaxWidth().zIndex(1f),
...
            }
      },
      bottomBar = {
        // Confirmation Button with Validation
        Button(
            modifier =
                Modifier.fillMaxWidth().padding(16.dp).testTag("editTutorProfileConfirmButton"),
            shape = MaterialTheme.shapes.medium,
            onClick = {
              if (firstName.isEmpty() || lastName.isEmpty() || phoneNumber.isEmpty()) {
                Toast.makeText(context, "Please fill all the fields", Toast.LENGTH_SHORT).show()
              } else if (!isPhoneNumberValid(phoneNumber)) {
                Toast.makeText(context, "Please input a valid phone number", Toast.LENGTH_SHORT)
...
